[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "install_process"
description = "A simple library to help you define your installation process, in Python !"
readme = "README.md"
dynamic = ["version"]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
docs_dep = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-pyscript",
]
dev = [
    "ruff==0.5.7",
    "pytest>=8.3.2",
    "install_process[docs_dep]"
]

[project.urls]
Github = "https://github.com/zaicruvoir1rominet/install_process"
Changelog = "https://github.com/zaicruvoir1rominet/install_process/main/CHANGELOG.md"

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
lint = ["ruff check install_process --fix"]
test = [
    "python --version",
    "pytest -s -v"
]
doc = ["sphinx-build -b html ./docs/source ./docs/build/"]

[tool.hatch.version]
path = "install_process/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["install_process"]
